[project]
name = "plugin-socialkit"
version = "0.1.1"
description = "Generate, score, and rewrite social posts against the live LinkedIn/X algorithm, plan content calendars, and create ad visuals — previewed inline in chat. Powered by socialkit.sh. Built on luna_sdk v0."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plugin_socialkit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
